# email-classification-system

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example_email.eml  process_email.py  sample_invoice_email.txt
scripts/: api_client.py  create_sample_invoice.py
src/email_classification/: __init__.py  dependencies.py  main.py
src/email_classification/api/: __init__.py  app.py  router.py
src/email_classification/classification/: __init__.py  classification_service.py  classifier.py
src/email_classification/config/: __init__.py  settings.py
src/email_classification/database/: __init__.py  migrate.py  supabase_client.py
src/email_classification/database/migrations/: 001_create_initial_tables.sql  002_create_email_service_tables.sql  __init__.py
src/email_classification/database/repositories/: __init__.py  classification_repository.py  email_repository.py  extraction_repository.py  report_repository.py
src/email_classification/document_processing/: __init__.py
src/email_classification/duplicate_detection/: __init__.py  vector_store.py
src/email_classification/email_parser/: __init__.py  parser.py
src/email_classification/email_service/: __init__.py  email_fetcher.py  imap_client.py  smtp_client.py
src/email_classification/extraction/: __init__.py  email_content.py  extraction_service.py  processors.py
src/email_classification/ingestion/: __init__.py
src/email_classification/llm/: __init__.py  anthropic_provider.py  llm_provider.py  llm_service.py  openai_provider.py  prompts.py
src/email_classification/reporting/: export_service.py  report_generator.py
src/email_classification/utils/: __init__.py  logger.py  validation.py
tests/: test_classifier.py  test_email_parser.py
