[tool.poetry]
name = "email-classification-system"
version = "0.1.0"
description = "AI-powered Email Classification System for Commercial Banking"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
pypdf2 = "^3.0.1"
python-docx = "^1.0.0"
email-parser = "^0.1.5"
pytesseract = "^0.3.10"
faiss-cpu = "^1.7.4"
chromadb = "^0.4.18"
sentence-transformers = "^2.2.2"
unstructured = "^0.10.30"
pandas = "^2.1.1"
redis = "^5.0.1"
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"
pylint = "^3.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true